# Oxide-Agent

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .mcp.json  .opencode-pre-commit.json  AGENT.md  AGENTS.md  BLUEPRINT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  IMPLEMENTATION_BLUEPRINT.md  LICENSE  README-ru.md  README.MD  README.md  SSH_MCP_SMOKE_CHECKLIST.md  config.py  database.py  deploy.sh  docker-compose.telegram.local-services.yml  docker-compose.telegram.yml  docker-compose.web.local-services.yml  docker-compose.web.yml  docker-compose.yml  handlers.py  main.py  managment-user.txt  requirements.txt  test_forum_method.rs  utils.py  watchdog_runner.py
crates/oxide-agent-core/: Cargo.toml  build.rs  clippy.toml  module_registry.toml
crates/oxide-agent-core/src/: config.rs  lib.rs  storage.rs  testing.rs  utils.rs
crates/oxide-agent-core/src/agent/: context.rs  executor.rs  identity.rs  input_intent.rs  memory.rs  memory_behavior.rs  mod.rs  narrator.rs  persistent_memory.rs  preprocessor.rs  profile.rs  progress.rs  provider.rs  recovery.rs  registry.rs  session.rs  structured_output.rs  task.rs  thoughts.rs  tool_bridge.rs  tool_failure_summary.rs  tool_model_route.rs  tool_runtime.rs
crates/oxide-agent-core/src/capabilities/: compiled.rs  manifest.rs  mod.rs  module.rs  registry.rs
crates/oxide-agent-core/src/llm/: capabilities.rs  client.rs  common.rs  embeddings.rs  error.rs  http_utils.rs  mod.rs  openai_compat.rs  provider.rs  retry.rs  types.rs  validation.rs
crates/oxide-agent-core/src/sandbox/: admin.rs  broker.rs  bwrap.rs  diagnostics.rs  error.rs  manager.rs  manager_stub.rs  mod.rs  scope.rs  traits.rs
crates/oxide-agent-core/src/storage/: browser_artifacts.rs  builders.rs  compaction.rs  control_plane.rs  error.rs  flows.rs  keys.rs  mod.rs  modules.rs  persistent_memory.rs  provider.rs  r2.rs  r2_base.rs  r2_config.rs  r2_control_plane.rs  r2_memory.rs  r2_persistent_memory.rs  r2_provider.rs  r2_reminder.rs  r2_user.rs  reminder.rs  schema.rs  sqlx.rs  sqlx_config.rs  telemetry.rs  user.rs  utils.rs
crates/oxide-agent-core/tests/: anthropic_e2e.rs  browser_use_provider.rs  cancellation_respected.rs  compaction_lifecycle.rs  crawl4ai_provider.rs  executor_waiting_input.rs  hermetic_agent.rs  json_decode_error.rs  llm_provider_check.rs  memory_contract.rs  minimax_e2e.rs  mistral_e2e.rs  modular_registry_snapshots.rs  orphaned_tool_results.rs  orphaned_tool_results_reliability.rs  proptest_recovery.rs  proptest_remediation.rs  provider_e2e.rs  r2_flow_checkpoint_integration.rs  rate_limit.rs  searxng_provider.rs  snapshot_prompts.rs  sub_agent_delegation.rs  tool_runtime_static_guards.rs
crates/oxide-agent-core/tests/snapshots/: modular_registry_snapshots__modular_registry_snapshot@all-features.snap  modular_registry_snapshots__modular_registry_snapshot@profile-embedded-opencode-local.snap  modular_registry_snapshots__modular_registry_snapshot@profile-full.snap  snapshot_prompts__fallback_prompt_snapshot.snap  (+7 more)
crates/oxide-agent-memory/: Cargo.toml
crates/oxide-agent-memory/migrations/: 20260406093000_create_memory_tables.sql  20260406120000_add_memory_embeddings.sql  20260406220500_add_memory_lexical_search_indexes.sql  20260407130000_add_memory_consolidation_fields.sql
crates/oxide-agent-memory/src/: archive.rs  consolidation.rs  extract.rs  finalize.rs  in_memory.rs  lib.rs  repository.rs  types.rs
crates/oxide-agent-runtime/: Cargo.toml
crates/oxide-agent-runtime/src/: lib.rs  observer_access.rs  session_registry.rs  task_events.rs  task_executor.rs  task_recovery.rs  task_registry.rs  worker_manager.rs
crates/oxide-agent-sandboxd/: Cargo.toml
crates/oxide-agent-sandboxd/src/: main.rs
crates/oxide-agent-telegram-bot/: Cargo.toml
crates/oxide-agent-telegram-bot/src/: main.rs
crates/oxide-agent-telegram-bot/tests/: integration_validation.rs
crates/oxide-agent-transport-telegram/: Cargo.toml
crates/oxide-agent-transport-telegram/src/: config.rs  lib.rs  reminder_scheduler.rs  runner.rs  startup_maintenance.rs
crates/oxide-agent-transport-telegram/tests/: agent_xml_leak_prevention.rs  manager_topic_delete_cleanup_integration.rs  reminder_scheduler_integration.rs  topic_routing_thread_integration.rs
crates/oxide-agent-transport-web/: Cargo.toml
crates/oxide-agent-transport-web/examples/: web_console_dev.rs
crates/oxide-agent-transport-web/src/: api.rs  auth.rs  in_memory_storage.rs  lib.rs  scripted_llm.rs  server.rs  session.rs  web_transport.rs
crates/oxide-agent-transport-web/tests/: e2e.rs
crates/oxide-agent-web-contracts/: Cargo.toml
crates/oxide-agent-web-contracts/src/: auth.rs  config.rs  error.rs  events.rs  lib.rs  sessions.rs  tasks.rs
crates/oxide-agent-web-ui/: Cargo.toml  Trunk.toml  index.html
crates/oxide-agent-web-ui/src/: api.rs  app.rs  auth.rs  components.rs  main.rs  markdown.rs  routes.rs  sessions.rs  sse.rs  styles.css  tasks.rs  utils.rs
crates/oxide-browser-contracts/: Cargo.toml
crates/oxide-browser-contracts/src/: lib.rs  types.rs
crates/oxide-browser-sidecar/: Cargo.toml
crates/oxide-browser-sidecar/src/: actions.rs  adblock.rs  browser.rs  capture.rs  cdp.rs  consent.rs  consent_engine.js  dom.rs  lib.rs  main.rs  observe.rs  scope.rs  screenshot.rs  session.rs  snapshot.rs  stealth.rs
crates/oxide-browser-sidecar/tests/: actions_integration.rs  capture_integration.rs  cdp_integration.rs  cdp_jpeg_verification.rs  quiescence_verify.rs  rest_contract.rs  smoke_client.rs  snapshot_stealth.rs
rust-src/: .dockerignore  AGENT.md  Cargo.toml  Dockerfile
rust-src/.cargo/: config.toml
rust-src/sandbox/: Dockerfile.sandbox
rust-src/src/: config.rs  lib.rs  main.rs  storage.rs  utils.rs
rust-src/src/agent/: executor.rs  memory.rs  mod.rs  preprocessor.rs  progress.rs  provider.rs  registry.rs  session.rs  tools.rs
rust-src/src/bot/: agent_handlers.rs  handlers.rs  mod.rs  state.rs
rust-src/src/llm/: common.rs  http_utils.rs  mod.rs  providers.rs
rust-src/src/sandbox/: manager.rs
rust-src/tests/: integration_validation.rs
(+972 files in other folders)
