[workspace]
members = [
    "crates/oxide-agent-core",
    "crates/oxide-agent-memory",
    "crates/oxide-agent-runtime",
    "crates/oxide-agent-transport-telegram",
    "crates/oxide-agent-transport-web",
    "crates/oxide-agent-telegram-bot",
    "crates/oxide-agent-sandboxd",
]
exclude = ["vendor/gemini-rust"]
resolver = "2"

[patch.crates-io]
gemini-rust = { path = "vendor/gemini-rust" }
