[workspace]
members = [
    "crates/oxide-agent-core",
    "crates/oxide-agent-runtime",
    "crates/oxide-agent-transport-telegram",
    "crates/oxide-agent-transport-web",
    "crates/oxide-agent-web-contracts",
    "crates/oxide-agent-web-ui",
    "crates/oxide-agent-telegram-bot",
    "crates/oxide-agent-sandboxd",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["@0FL01"]
