[package]
name = "another-chat-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
regex = "1.10"
lazy_static = "1.4"
aws-sdk-s3 = "1.119.0"
aws-config = "1.8.12"
aws-credential-types = "1.2.11"
aws-types = "1.3.11"
async-openai = { version = "0.32.2", features = ["full"] }
reqwest = { version = "0.13.1", features = ["cookies", "json", "multipart", "rustls", "stream"], default-features = false }
base64 = "0.22.1"
async-trait = "0.1.89"
teloxide = { version = "0.17.0", features = ["ctrlc_handler", "macros", "rustls"], default-features = false }
html-escape = "0.2.13"
anyhow = "1.0.100"
