[package]
name = "another-chat-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
regex = "1.10"
lazy_static = "1.4"
aws-sdk-s3 = "1.119.0"
aws-config = "1.8.12"
aws-credential-types = "1.2.11"
aws-types = "1.3.11"
async-openai = { version = "0.32.2", default-features = false, features = ["rustls", "chat-completion", "audio", "image"] }
reqwest = { version = "0.12", features = ["cookies", "json", "multipart", "rustls-tls", "stream"], default-features = false }
base64 = "0.22.1"
async-trait = "0.1.89"
teloxide = { version = "0.17.0", features = ["ctrlc_handler", "macros", "rustls"], default-features = false }
html-escape = "0.2.13"
anyhow = "1.0.100"
rig-core = { version = "0.27.0", default-features = false, features = ["derive", "reqwest-rustls"] }
tiktoken-rs = "0.9.1"
once_cell = "1.21.3"
bollard = "0.19.4"
futures-util = "0.3.31"
uuid = { version = "1.19.0", features = ["v4"] }
shell-escape = "0.1.5"


