[package]
name = "oxide-agent-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["@0FL01"]

[lints.rust]
unsafe_code = "forbid"
suspicious_double_ref_op = "deny"

[lints.clippy]
unwrap_used = "forbid"
too_many_lines = "forbid"
too_many_arguments = "deny"
await_holding_lock = "deny"
redundant_clone = "deny"           
clone_on_ref_ptr = "deny"          

[dependencies]
tokio = { version = "1.48", features = ["full", "test-util"] }
tokio-util = "0.7"
tracing = "0.1"
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
regex = "1.10"
aws-sdk-s3 = "1.119.0"
aws-config = "1.8.12"
aws-credential-types = "1.2.11"
aws-types = "1.3.11"
async-openai = { version = "0.33.1", default-features = false, features = ["rustls", "chat-completion", "audio", "image"] }
reqwest = { version = "0.12", features = ["cookies", "json", "multipart", "rustls-tls", "stream"], default-features = false }
base64 = "0.22.1"
async-trait = "0.1.89"
html-escape = "0.2.13"
anyhow = "1.0.100"
rmcp = { version = "1.2.0", default-features = false, features = ["client", "transport-child-process"] }
tiktoken-rs = "0.9.1"
bollard = "0.20.2"
futures-util = "0.3.31"
uuid = { version = "1.19.0", features = ["v4"] }
shell-escape = "0.1.5"
tavily = { version = "2.0", optional = true }
chrono = { version = "0.4.42", features = ["serde"] }
tar = "0.4"
bytes = "1.11"
http-body-util = "0.1"
serde_bytes = "0.11.19"
lazy-regex = "3.5.1"
moka = { version = "0.12", features = ["future"] }
tokio-retry = "0.3"
unicode-segmentation = "1.12.0"
sha2 = "0.10.9"
serde_yaml = "0.9.34"
zai-rs = "0.1.13"
claudius = "0.19.0"
mockall = "0.14.0"
insta = "1.46.1"
bincode = "1.3.3"
tempfile = "3.27.0"
cron = "0.15.0"
chrono-tz = "0.10.4"
fastrand = "2.3.0"
gemini-rust = "1.7.1"

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[features]
default = ["tavily", "searxng"]
tavily = ["dep:tavily"]
searxng = []
crawl4ai = []
browser_use = []
jira = []
mattermost = []

[dev-dependencies]
dotenvy = "0.15"
proptest = "1.9.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
