[package]
name = "oxide-agent-memory"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["@0FL01"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
too_many_lines = "forbid"
too_many_arguments = "deny"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19.0", features = ["v4", "v5"] }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0.102"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json", "migrate", "macros"] }
pgvector = { version = "0.4.1", features = ["sqlx"] }

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
