[package]
name = "oxide-agent-sandboxd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
too_many_lines = "forbid"
too_many_arguments = "forbid"

[dependencies]
oxide-agent-core = { path = "../oxide-agent-core" }
tokio = { version = "1.48", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
sandbox-daemon = ["oxide-agent-core/sandbox-daemon"]
profile-full = ["sandbox-daemon"]

[[bin]]
name = "oxide-agent-sandboxd"
path = "src/main.rs"
required-features = ["sandbox-daemon"]
