[package]
name = "oxide-agent-telegram-bot"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["@0FL01"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
too_many_lines = "forbid"
too_many_arguments = "forbid"

[dependencies]
oxide-agent-core = { path = "../oxide-agent-core" }
oxide-agent-transport-telegram = { path = "../oxide-agent-transport-telegram" }
tokio = { version = "1.48", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"

[dev-dependencies]
anyhow = "1.0.100"
aws-config = "1.8.12"
aws-credential-types = "1.2.11"
aws-sdk-s3 = "1.119.0"
aws-types = "1.3.11"
