[package]
name = "oxide-agent-telegram-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["@0FL01"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
too_many_lines = "forbid"
too_many_arguments = "forbid"

[dependencies]
anyhow = "1.0.100"
oxide-agent-core = { path = "../oxide-agent-core" }
oxide-agent-transport-telegram = { path = "../oxide-agent-transport-telegram" }
tokio = { version = "1.48", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"

[features]
default = []
transport-telegram = ["oxide-agent-core/transport-telegram"]
llm-chatgpt = ["oxide-agent-core/llm-chatgpt"]
storage-s3-r2 = [
    "oxide-agent-core/storage-s3-r2",
    "oxide-agent-transport-telegram/storage-s3-r2",
]
storage-sqlx = [
    "oxide-agent-core/storage-sqlx",
    "oxide-agent-transport-telegram/storage-sqlx",
]
profile-full = [
    "transport-telegram",
    "oxide-agent-core/profile-full",
    "llm-chatgpt",
    "storage-s3-r2",
    "storage-sqlx",
]
profile-embedded-opencode-local = [
    "transport-telegram",
    "oxide-agent-core/profile-embedded-opencode-local",
    "storage-s3-r2",
    "storage-sqlx",
]
profile-lite = [
    "transport-telegram",
    "oxide-agent-core/profile-lite",
    "storage-s3-r2",
    "storage-sqlx",
]
profile-search-only = [
    "transport-telegram",
    "oxide-agent-core/profile-search-only",
    "storage-s3-r2",
    "storage-sqlx",
]
profile-no-sandbox = [
    "transport-telegram",
    "oxide-agent-core/profile-no-sandbox",
    "storage-s3-r2",
    "storage-sqlx",
]
profile-media-enabled = [
    "transport-telegram",
    "oxide-agent-core/profile-media-enabled",
    "storage-s3-r2",
    "storage-sqlx",
]
profile-host-bwrap = [
    "transport-telegram",
    "oxide-agent-core/profile-host-bwrap",
    "storage-s3-r2",
    "storage-sqlx",
]

[dev-dependencies]
aws-config = "1.8.12"
aws-credential-types = "1.2.11"
aws-sdk-s3 = "1.119.0"
aws-types = "1.3.11"

[[bin]]
name = "oxide-agent-telegram-bot"
path = "src/main.rs"
required-features = ["transport-telegram", "storage-s3-r2"]

[[bin]]
name = "chatgpt-login"
path = "src/bin/chatgpt-login.rs"
required-features = ["llm-chatgpt"]
