[package]
name = "oxide-agent-telegram-bot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
too_many_lines = "forbid"
too_many_arguments = "forbid"

[dependencies]
anyhow = "1.0.100"
oxide-agent-core = { path = "../oxide-agent-core" }
oxide-agent-transport-telegram = { path = "../oxide-agent-transport-telegram" }
tokio = { version = "1.48", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"

[features]
default = []
transport-telegram = ["oxide-agent-core/transport-telegram"]
llm-chatgpt = ["oxide-agent-core/llm-chatgpt"]
storage-sqlx = [
    "oxide-agent-core/storage-sqlx",
    "oxide-agent-transport-telegram/storage-sqlx",
]
profile-full = [
    "transport-telegram",
    "oxide-agent-core/profile-full",
    "llm-chatgpt",
    "storage-sqlx",
]
profile-embedded-opencode-local = [
    "transport-telegram",
    "oxide-agent-core/profile-embedded-opencode-local",
    "storage-sqlx",
]
profile-lite = [
    "transport-telegram",
    "oxide-agent-core/profile-lite",
    "storage-sqlx",
]
profile-search-only = [
    "transport-telegram",
    "oxide-agent-core/profile-search-only",
    "storage-sqlx",
]
profile-no-sandbox = [
    "transport-telegram",
    "oxide-agent-core/profile-no-sandbox",
    "storage-sqlx",
]
profile-media-enabled = [
    "transport-telegram",
    "oxide-agent-core/profile-media-enabled",
    "storage-sqlx",
]

[[bin]]
name = "oxide-agent-telegram-bot"
path = "src/main.rs"
required-features = ["transport-telegram"]

[[bin]]
name = "chatgpt-login"
path = "src/bin/chatgpt-login.rs"
required-features = ["llm-chatgpt"]
