[package]
name = "oxide-agent-transport-telegram"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["@0FL01"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
too_many_lines = "forbid"
too_many_arguments = "deny"

[dependencies]
oxide-agent-core = { path = "../oxide-agent-core" }
oxide-agent-runtime = { path = "../oxide-agent-runtime" }
teloxide = { version = "0.17.0", features = ["ctrlc_handler", "macros", "rustls"], default-features = false }
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
tracing = "0.1"
html-escape = "0.2.13"
serde = { version = "1.0", features = ["derive"] }
config = "0.15"
moka = { version = "0.12", features = ["future"] }
serde_json = "1.0"

[features]
default = []
profile-full = ["oxide-agent-core/profile-full", "storage-s3-r2"]
profile-embedded-opencode-local = [
    "oxide-agent-core/profile-embedded-opencode-local",
    "storage-s3-r2",
]
profile-lite = ["oxide-agent-core/profile-lite", "storage-s3-r2"]
profile-search-only = ["oxide-agent-core/profile-search-only", "storage-s3-r2"]
profile-no-sandbox = ["oxide-agent-core/profile-no-sandbox", "storage-s3-r2"]
profile-media-enabled = ["oxide-agent-core/profile-media-enabled", "storage-s3-r2"]
profile-host-bwrap = ["oxide-agent-core/profile-host-bwrap", "storage-s3-r2"]
storage-s3-r2 = ["oxide-agent-core/storage-s3-r2"]

[dev-dependencies]
lazy-regex = "3.5.1"
serde_json = "1.0"
oxide-agent-transport-web = { path = "../oxide-agent-transport-web" }
chrono = { version = "0.4.42", features = ["serde"] }
tokio-util = "0.7"
