[package]
name = "oxide-agent-transport-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
too_many_lines = "forbid"
too_many_arguments = "deny"

[dependencies]
oxide-agent-core = { path = "../oxide-agent-core" }
oxide-agent-runtime = { path = "../oxide-agent-runtime" }
teloxide = { version = "0.17.0", features = ["ctrlc_handler", "macros", "rustls"], default-features = false }
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
tracing = "0.1"
html-escape = "0.2.13"
serde = { version = "1.0", features = ["derive"] }
config = "0.15"
moka = { version = "0.12", features = ["future"] }
serde_json = "1.0"

[features]
default = []
profile-full = ["oxide-agent-core/profile-full", "storage-sqlx"]
profile-embedded-opencode-local = [
    "oxide-agent-core/profile-embedded-opencode-local",
    "storage-sqlx",
]
profile-lite = ["oxide-agent-core/profile-lite", "storage-sqlx"]
profile-search-only = ["oxide-agent-core/profile-search-only", "storage-sqlx"]
profile-media-enabled = ["oxide-agent-core/profile-media-enabled", "storage-sqlx"]
storage-sqlx = ["oxide-agent-core/storage-sqlx"]

[dev-dependencies]
lazy-regex = "3.5.1"
serde_json = "1.0"
oxide-agent-transport-web = { path = "../oxide-agent-transport-web" }
chrono = { version = "0.4.42", features = ["serde"] }
tokio-util = "0.7"
