[package]
name = "oxide-agent-transport-web"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["@0FL01"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
too_many_lines = "forbid"
too_many_arguments = "forbid"

[dependencies]
oxide-agent-core = { path = "../oxide-agent-core" }
oxide-agent-memory = { path = "../oxide-agent-memory" }
oxide-agent-runtime = { path = "../oxide-agent-runtime" }
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
lazy_static = "1.4"
futures-util = "0.3"
anyhow = "1.0.100"
async-trait = "0.1.89"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"
