[package]
name = "oxide-agent-transport-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints.rust]

[lints.clippy]
unwrap_used = "forbid"
too_many_lines = "forbid"
too_many_arguments = "forbid"

[dependencies]
oxide-agent-core = { path = "../oxide-agent-core" }
oxide-agent-runtime = { path = "../oxide-agent-runtime" }
oxide-agent-web-contracts = { path = "../oxide-agent-web-contracts" }
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
async-stream = "0.3"
lazy_static = "1.4"
futures-util = "0.3"
anyhow = "1.0.100"
async-trait = "0.1.89"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5.3"
sha2 = "0.10.9"
base64 = "0.22.1"
sqlx-postgres = { version = "0.8.6", default-features = false, features = ["chrono", "json", "uuid", "migrate"], optional = true }
sqlx-core = { version = "0.8.6", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "chrono", "json", "uuid", "migrate"], optional = true }
moka = { version = "0.12", features = ["future"] }

[features]
default = []
profile-lite = ["oxide-agent-core/profile-lite", "storage-sqlx"]
profile-full = ["oxide-agent-core/profile-full", "storage-sqlx"]
profile-web-embedded-opencode-local = [
    "oxide-agent-core/profile-web-embedded-opencode-local",
    "storage-sqlx",
]
storage-sqlx = [
    "oxide-agent-core/storage-sqlx",
    "dep:sqlx-core",
    "dep:sqlx-postgres",
]
socket_e2e = ["oxide-agent-core/llm-opencode-go"]
delegation_e2e = ["oxide-agent-core/tool-delegation"]
compression_e2e = ["oxide-agent-core/tool-compression"]

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
bytes = "1"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[[bin]]
name = "oxide-agent-web-console"
path = "src/bin/oxide-agent-web-console.rs"
