[package]
name = "oxide-agent-web-contracts"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["@0FL01"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
too_many_lines = "forbid"
too_many_arguments = "forbid"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
