[package]
name = "oxide-browser-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
too_many_lines = "forbid"
too_many_arguments = "forbid"

[dependencies]
oxide-browser-contracts = { path = "../oxide-browser-contracts" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = { version = "0.29.0", features = ["connect"] }
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["json", "query", "rustls"], default-features = false }
uuid = { version = "1.23.3", features = ["v4"] }
thiserror = "2.0.18"
tempfile = "3.27.0"
base64 = "0.22"
sha2 = "0.10.9"

[[bin]]
name = "oxide-browser-sidecar"
path = "src/main.rs"
